Fix status bar alignment problem on native-ui theme.// Resolve #166

--- a/styles/platformio-ide-terminal.less
+++ b/styles/platformio-ide-terminal.less
@@ -109,6 +109,8 @@
   }
 
   &.status-bar {
+    position: relative;
+    vertical-align: middle;
     display: inline;
     -webkit-user-select: none;
     margin: 0 10px;
